--- a/css/skin/skin-1.css
+++ b/css/skin/skin-1.css
@@ -12,7 +12,7 @@ background:#ed4c2f
 /*-----Background Color-----*/
 .nav-dark.header-nav .nav > li .sub-menu li:hover > a, .site-button, .site-button-link::after,.header-style1 .site-search,.sx-separator::before,.sx-bg-primary,[class^="box-animation-"],.filter-pos-left .btn-filter-wrap li:hover:before,.filter-pos-left .btn-filter-wrap li:hover:after,.line-list-style li::before,.input-animate.input .spin,.sx-bnr-inr-entry .banner-title-outer h2:after,.section-head-two:before,.acc-bg-primary a,button.scroltop,.side-bar .widget .widget-title:before,.a-about2:after,.swiper-pagination-bullet-active,.our-team-2 .icons i,
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill,.header-style2 .social-bx li a::after{
-	background-color: #ed4c2f	
+	background-color: #c73689	
 }
 
 .owl-btn-vertical-center .owl-nav .owl-prev, .owl-btn-vertical-center .owl-nav .owl-next,.blog-style-1 .post-category a::after,.testimonial-home .owl-prev:hover, .testimonial-home.owl-prev:active, .testimonial-home .owl-prev:focus, .testimonial-home .owl-next:hover, .testimonial-home .owl-next:active, .testimonial-home .owl-next:focus{
